# midway

./: .env.example  .gitignore  .vercelignore  MIDWAY_BUILD_PROMPT.md  MIDWAY_DESIGN_PROMPT.md  MIDWAY_INTRO_PROMPT.md  README.md  midway-ecosystem.html  midway-intro.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
apps/web/: middleware.ts  next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/arcade/: layout.tsx  page.tsx
apps/web/app/colors/: layout.tsx  page.tsx
apps/web/components/: AttractionsGrid.tsx  CountUp.tsx  Hero.tsx  HonestStrip.tsx  TheLoop.tsx  TopBar.tsx
apps/web/components/colors/: BetPanel.tsx  ColorPicker.tsx  ColorsGame.tsx  ColorsRules.tsx  DiceStage.tsx  ResultBanner.tsx  ResultBreakdown.tsx
apps/web/components/os/: AmbientSound.tsx  ArcadeMusicBridge.tsx  AvatarPicker.tsx  BootScreen.tsx  ComingSoonStub.tsx  DashboardPanel.tsx  DesktopIcons.tsx  DitherFilter.tsx  FairnessPanel.tsx  FieldWalkers.tsx  IdleDesktop.tsx  InfoPanel.tsx  KineticHero.tsx  LeaderboardPanel.tsx  Marquee.tsx  MidwayCursor.tsx  MusicTrayControl.tsx  NftLaunchPanel.tsx  OsContext.tsx  (+8 more)
apps/web/hooks/: useColorsBetTx.ts  useMidwayWallet.ts  usePlayerProfile.ts  useSolBalance.ts
apps/web/lib/: ambientAudio.ts  idleCubeChars.ts  pixel.tsx
apps/web/public/: midway-intro.html
programs/midway-treasury/: Anchor.toml  build.sh
programs/midway-treasury/programs/midway-treasury/: Cargo.toml
programs/midway-treasury/programs/midway-treasury/src/: lib.rs
programs/midway-treasury/tests/: midway-treasury.ts
(+41 files in other folders)
